<resources>
    <string name="app_name">Chant</string>
    <string name="title_home">Home</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="title_tienda">Tienda</string>
    <string name="title_album">Album</string>
    <string name="title_activity_match">Partido</string>
    <string name="title_activity_post">Post</string>
    <string name="title_activity_album">Entrada Album</string>
    <string name="title_activity_abrir_sobre">Sobre</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>