<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_tienda"
        android:icon="@drawable/ic_store"
        android:title="@string/title_tienda" />

    <item
        android:id="@+id/navigation_album"
        android:icon="@drawable/ic_album"
        android:title="@string/title_album" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_perfil" />

</menu>