<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_tienda"
        android:name="com.chant.android.ui.tienda.TiendaFragment"
        android:label="@string/title_tienda"
        tools:layout="@layout/fragment_tienda" />

    <fragment
        android:id="@+id/navigation_album"
        android:name="com.chant.android.ui.album.AlbumFragment"
        android:label="@string/title_album"
        tools:layout="@layout/fragment_tienda" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.chant.android.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.chant.android.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.chant.android.ui.perfil.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />


</navigation>